--- a/50statesquiz.html
+++ b/50statesquiz.html
@@ -1,6 +1,6 @@
 <div align="left">
 <img src="assets/logo.jpg" alt="Murphy" style="width:140px;height:140px;">
 </div>
-<a class="button" href="./50states.html">Quiz Time!</a>
+<a class="button" href="./index.html">Quiz Time!</a>
 <img src="assets/Map_of_USA_with_state_names.svg" alt="50 States Map" height="600" width="800"> 
 <link rel="stylesheet" type="text/css" href="maincss">
